added new files

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div style="text-align: center; padding: 20px; background: #333;">
-            <a href="https://www.murtpoiss.ee/cms/home" style="color: white; margin: 0 10px; text-decoration: none;">Avaleht</a>
+            <a href="#" style="color: white; margin: 0 10px; text-decoration: none;">Avaleht</a>
         </div>
     </header>
 
@@ -28,8 +28,8 @@
 
     <footer>
         <div style="text-align: center;">
-            <a href="https://www.murtpoiss.ee/" style="text-decoration: none; color: #333;">www.murtpoiss.ee</a>
-            <a href="http://./dashboard" title="Admin Login" style="margin-left: 5px; text-decoration: none; color: #333; font-size: 1rem;">©</a>
+            <a href="#" style="text-decoration: none; color: #333;">www.murtpoiss.ee</a>
+            <a href="#" title="Admin Login" style="margin-left: 5px; text-decoration: none; color: #333; font-size: 1rem;">©</a>
         </div>                                    
     </footer>
 </body>
