--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="et">
+
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,55 @@
     <link rel="icon" href="https://www.murtpoiss.ee/cms/public/uploads/site_icon_69334cff34068.ico">
     <link rel="stylesheet" href="./index_files/blocks.css">
     <style>
-        body { font-family: sans-serif; margin: 0; line-height: 1.6; color: #333; display: flex; flex-direction: column; min-height: 100vh; }
-        header { background: #333; color: white; padding: 10px 0; text-align: center; width: 100%; }
-        header a { color: white; text-decoration: none; margin: 0 10px; }
-        .content { flex: 1; display: flex; align-items: center; justify-content: center; flex-direction: column; }
-        h1 { font-family: 'Courier New', Courier, monospace; font-size: 3rem; margin: 0; }
-        footer { text-align: center; margin-top: auto; padding: 20px; border-top: 1px solid #eee; color: #666; width: 100%; }
+        body {
+            font-family: sans-serif;
+            margin: 0;
+            line-height: 1.6;
+            color: #333;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+
+        header {
+            background: #333;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+            width: 100%;
+        }
+
+        header a {
+            color: white;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+
+        .content {
+            flex: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+        }
+
+        h1 {
+            font-family: 'Courier New', Courier, monospace;
+            font-size: 3rem;
+            margin: 0;
+        }
+
+        footer {
+            text-align: center;
+            margin-top: auto;
+            padding: 20px;
+            border-top: 1px solid #eee;
+            color: #666;
+            width: 100%;
+        }
     </style>
 </head>
+
 <body>
     <header>
         <div style="text-align: center; padding: 20px; background: #333;">
@@ -22,15 +64,17 @@
         </div>
     </header>
 
-    <div class="content"> 
+    <div class="content">
         <h1>Hello World</h1>
     </div>
 
     <footer>
         <div style="text-align: center;">
             <a href="#" style="text-decoration: none; color: #333;">www.murtpoiss.ee</a>
-            <a href="#" title="Admin Login" style="margin-left: 5px; text-decoration: none; color: #333; font-size: 1rem;">©</a>
-        </div>                                    
+            <a href="#" title="Admin Login"
+                style="margin-left: 5px; text-decoration: none; color: #333; font-size: 1rem;">©</a>
+        </div>
     </footer>
 </body>
+
 </html>
